# daily_facts_ninjserv

./: CONFIG.md  README.md  pyproject.toml  rate_limits.json  test_gemini.py  test_score_decoder.py  used_facts.json
src/: commands.py  events.py  gemini_client.py  main.py  models.py
src/utils/: fact_tracker.py  score_decoder.py  score_manager.py  vector_store.py
